--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pet Central</title>
+    <title>Zookery</title>
     <link rel="stylesheet" href="css/style_index.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
             <a href="om_oss.html">Om oss</a>
             <a href="restaurang.html">Meny</a>
         </nav>
-    <h1>Pet Central Bakery</h1>
+    <h1>Zookery</h1>
     </header>
 </body>
 </html>
