färdig med startsidan

--- a/index.html
+++ b/index.html
@@ -5,16 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zookery</title>
-    <link rel="stylesheet" href="css/style_index.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="index.html">Startsida</a>
-            <a href="om_oss.html">Om oss</a>
-            <a href="restaurang.html">Meny</a>
-        </nav>
-    <h1>Zookery</h1>
-    </header>
+    <div class="head">
+        <div class="navbar">
+            <img src="img/pics/turtle.png" width="200px" height="150px">
+            <h1>Zookery</h1>
+            <div class="li">
+            <a class="link" href="index.html">Home</a>
+            <a class="link" href="meny.html">Menu</a>
+            <a class="link" href="om_oss.html">About us</a>
+            </div>
+        </div>
+        <div class="poster">
+            <div class="left-column">
+                <h2>Our animals</h2>
+                <h3>have stolen your food here 😭</h3>
+                <div class="opening-hours">
+                    <details> <summary>Time to find your food</summary> 
+                    <p class="time">Monday 7AM - 18PM<br>
+                    Tuesday 7AM - 18PM<br>
+                    Wednesday 7AM - 18PM<br>
+                    Thursday 7AM - 18PM<br>
+                    Friday 7AM - 16PM<br>
+                    Saturday CLOSED<br>
+                    Sunday CLOSED</p>
+                    </details>
+                </div>
+
+            </div>
+            <div class="right-column">
+                <img src="img/pics/hemsida.jpg">
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
