--- a/om_oss.html
+++ b/om_oss.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Om oss</title>
-    <link rel="stylesheet" href="css/style_om.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="head">
+        <div class="navbar">
+            <a href="index.html"><img src="img/pics/turtle.png" width="200px" height="150px"></a>
+        </div>
 </body>
 </html>
