--- a/meny.html
+++ b/meny.html
@@ -10,7 +10,7 @@
 <body>
     <div class="head_meny">
         <div class="navbar">
-            <a href="index.html"><img src="img/pics/turtle.png" width="100px"></a>
+            <a href="index.html"><img class="turtleinmenu" src="img/pics/turtle.png" width="100px"></a>
             <div class="title">
             <h4><span>vegan friendly bakery</span>our menu</h4>
         </div>
