fixa omoss sidan

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="head">
         <div class="navbar">
             <img src="img/pics/turtle.png" width="200px" height="150px">
-            <h1>Zookery</h1>
+            <h1 class="h1">Zookery</h1>
             <div class="li">
             <a class="link" href="index.html">Home</a>
             <a class="link" href="meny.html">Menu</a>
