--- a/om_oss.html
+++ b/om_oss.html
@@ -43,6 +43,14 @@
                 <div class="job">Waiter</div>
                 <div class="about">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia, quis.</div>
             </div>
+
+            <div class="teams">
+                <img src="img/pics/goat.png">
+                <div class="name">Goat</div>
+                <div class="job">Security</div>
+                <div class="about">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia, quis.</div>
+            </div>
+
         </div>
 
     </div>
