update omoss sidan

--- a/om_oss.html
+++ b/om_oss.html
@@ -26,7 +26,7 @@
             <div class="teams">
                 <img src="img/pics/dog.png">
                 <div class="name">Dog</div>
-                <div class="job">Dish washer</div>
+                <div class="job">Chef</div>
                 <div class="about">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia, quis.</div>
             </div>
     
