--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="head">
         <div class="navbar">
             <img src="img/pics/turtle.png" width="200px" height="150px">
-            <h1 class="h1">Zookery</h1>
+            <h1>Zookery</h1>
             <div class="li">
             <a class="link" href="index.html">Home</a>
             <a class="link" href="meny.html">Menu</a>
@@ -38,8 +37,6 @@
             <div class="right-column">
                 <img src="img/pics/hemsida.jpg">
             </div>
-
         </div>
-    </div>
 </body>
 </html>
