--- a/om_oss.html
+++ b/om_oss.html
@@ -10,7 +10,7 @@
 <body>
     <div class="head_meny">
         <div class="navbar">
-            <a href="index.html"><img class="turtleinmenu" src="img/pics/turtle.png" width="100px"></a>
+            <a href="index.html"><img class="turtleinmenu" src="img/pics/icon.png" width="100px"></a>
             <div class="title">
             <h4><span>world's most adorable</span>FRIENDS</h4>
         </div>
