--- a/om_oss.html
+++ b/om_oss.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="head_meny">
         <div class="navbar">
             <a href="index.html"><img class="turtleinmenu" src="img/pics/icon.png" width="100px"></a>
             <div class="title">
@@ -47,12 +46,11 @@
             <div class="teams">
                 <img src="img/pics/goat.png">
                 <div class="name">Goat</div>
-                <div class="job">Security</div>
+                <div class="job">Security guard</div>
                 <div class="about">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia, quis.</div>
             </div>
 
         </div>
 
-    </div>
 </body>
 </html>
